// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders correctly 1`] = `
<button
  className="Shorty-Button"
>
  Lorem ipsum
</button>
`;

exports[`<Button className="foo-bar" /> renders correctly 1`] = `
<button
  className="Shorty-Button foo-bar"
>
  Lorem ipsum
</button>
`;

exports[`<Button disabled /> renders correctly 1`] = `
<button
  className="Shorty-Button Shorty-Button--disabled"
  disabled={true}
>
  Lorem ipsum
</button>
`;
